--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 }
 {    
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run lena:build",
+    "deploy": "gh-pages -d lena-static"
   }
 }
