--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "glslify-deps": "^1.3.2"
   },
   "scripts": {
-    "predeploy": "npm run lena:build",
-    "deploy": "gh-pages -d lena-static"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d -static"
   }
 }
