--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d -static"
+    "deploy": "gh-pages -d static"
   }
 }
