--- a/package.json
+++ b/package.json
@@ -12,7 +12,16 @@
     "glslify-deps": "^1.3.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d static"
+    "start": "parcel /index.html",
+    "prebuild-dev": "shx rm -rf dist/*",
+    "build-dev": "parcel build /index.html --no-minify --public-url ./",
+    "prebuild": "shx rm -rf dist/*",
+    "build": "parcel build ./src/index.html --public-url ./",
+    "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
+  },
+  "devDependencies": {
+    "shx": "^0.3.2"
+  }
+}
   }
 }
