--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prebuild-dev": "shx rm -rf dist/*",
     "build-dev": "parcel build /index.html --no-minify --public-url ./",
     "prebuild": "shx rm -rf dist/*",
-    "build": "parcel build ./src/index.html --public-url ./",
+    "build": "parcel build /index.html --public-url ./",
     "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
   },
   "devDependencies": {
