--- a/package.json
+++ b/package.json
@@ -5,9 +5,18 @@
     "gsap": "^3.5.1",
     "jquery": "^3.5.1"
   },
+  "scripts": {
+    "start": "parcel index.html",
+    "prebuild-dev": "shx rm -rf dist/*",
+    "build-dev": "parcel build index.html --no-minify --public-url ./",
+    "prebuild": "shx rm -rf dist/*",
+    "build": "parcel build index.html --public-url ./",
+    "push-gh-pages": "push-dir --dir=dist --branch=gh-pages --cleanup --verbose"
+  },
   "devDependencies": {
     "cssnano": "^4.1.10",
     "glslify-bundle": "^5.1.1",
-    "glslify-deps": "^1.3.1"
+    "glslify-deps": "^1.3.1",
+    "shx": "^0.3.2"
   }
 }
